tests/typing/pass/smtlib/v2.7/base/test-008.smt2
(set-logic QF_UF)
(declare-fun a () Bool)
(declare-fun b () Bool)
(declare-fun c () Bool)
(assert (and (= a b) (= b c) (not (= a c))))
(check-sat)
